Fix spacing

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -290,10 +290,6 @@ body {
     }
 }
 
-.top .container.movie-top-4.content-2 {
-    margin-top: 90px
-}
-
 .top .video-detail.row .col-md-4 {
     padding-right: 0;
 }
@@ -416,10 +412,6 @@ body {
             padding: 0
         }
     }
-}
-
-.top .container.movie-top-4 {
-    margin-top: 220px;
 }
 
 .top .movie-top-3.row .col-md-10,
@@ -833,23 +825,6 @@ body {
         left: 0;
     }
 
-    .top .container.movie-top-4 {
-        margin-top: -0;
-        padding-left: 0;
-        padding-bottom: 60px;
-        margin-left: 0;
-    }
-
-    .top .container.movie-top-4 .cb-path,
-    .top .content-last .cb-path {
-        top: 0;
-        left: 0
-    }
-
-    .top .container.movie-top-4 .cb-path {
-        margin-top: 0
-    }
-
     .top .content-last .icon-favorior {
         position: relative;
         top: 18px
@@ -906,11 +881,6 @@ body {
     .top .corner-wrapper.movie-2 {
         width: 48%;
         height: 131px;
-    }
-
-    .top .container.movie-top-4.content-2 {
-        margin: 0;
-        padding-left: 0;
     }
 
     #modal_register .modal-content {
